Добавляет шрифты, оптимизированные картинки, некоторые блоки scss

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,3 +2,9 @@
 // ---------------------------------
 
 @import "vendor/normalize";
+@import "./common/variables.scss";
+@import "./common/mixins.scss";
+@import "./common/fonts.scss";
+@import "./common/global.scss";
+@import "./common/visually-hidden.scss";
+@import "./blocks/test.scss";
