тестирует на pp

--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -5,7 +5,7 @@ $dark-accent-text-color: #103aae;
 $gradient-text-color: linear-gradient(#d10a42, #0041ca);
 
 /* background color */
-$background: #ffffff;
+$background-color: #ffffff;
 $background-extra: #f8f9fc;
 $background-dark: #102654;
 $background-footer: #030a1a;
