--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,3 +7,13 @@
 @import "./common/fonts.scss";
 @import "./common/global.scss";
 @import "./common/visually-hidden.scss";
+
+//blocks
+@import "./blocks/page-body.scss";
+@import "./blocks/promo.scss";
+@import "./blocks/navigation.scss";
+@import "./blocks/hero.scss";
+@import "./blocks/zones.scss";
+@import "./blocks/main-info.scss";
+
+
