--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,10 +10,32 @@
 
 //blocks
 @import "./blocks/page-body.scss";
+@import "./blocks/page.scss";
 @import "./blocks/promo.scss";
 @import "./blocks/navigation.scss";
 @import "./blocks/hero.scss";
 @import "./blocks/zones.scss";
 @import "./blocks/main-info.scss";
+@import "./blocks/main.scss";
+@import "./blocks/about.scss";
+@import "./blocks/prices.scss";
+@import "./blocks/tabs.scss";
+@import "./blocks/membership-card.scss";
+@import "./blocks/membership-cards.scss";
+@import "./blocks/competitons.scss";
+@import "./blocks/ad.scss";
+@import "./blocks/ad-timetable.scss";
+@import "./blocks/juri.scss";
+@import "./blocks/juri-card.scss";
+@import "./blocks/features-card.scss";
+@import "./blocks/features.scss";
+@import "./blocks/offers.scss";
+@import "./blocks/main-offer.scss";
+@import "./blocks/extra-offers.scss";
+@import "./blocks/extra-offer.scss";
+
+@import "./blocks/main-footer.scss";
+@import "./blocks/footer-links.scss";
+
 
 
