Добавляет оставшиеся блоки

--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -28,3 +28,23 @@
   width: 100%;
 }
 
+.main__contacts {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main__reviews {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main__faq {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
