--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -1,5 +1,6 @@
-.offers {
+.faq {
   width: 100%;
+  background-color: $background-extra;
 
   @media (min-width: $tablet-width) {
     display: flex;
@@ -8,47 +9,33 @@
   }
 }
 
-.offers__wrapper {
-  width: 100%;
-  padding: 40px 0;
+.faq__wrapper {
+  width: 320px;
+  padding: 70px 15px;
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 35px;
   align-items: center;
 
   @media (min-width: $tablet-width) {
     width: 768px;
     padding: 60px 45px;
+    gap: 45px;
   }
 
   @media (min-width: $desktop-width) {
     width: 1366px;
     padding: 100px 103px;
+    display: grid;
+    grid-template-areas: "header header"
+    "tabs accordion";
+    grid-template-columns: 260px 1fr;
+    gap: 50px 40px;
+    align-items: flex-start;
   }
 }
 
-.offers__content {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 40px;
-
-  @media (min-width: $tablet-width) {
-    width: 768px;
-    padding: 0 45px;
-  }
-
-  @media (min-width: $desktop-width) {
-    width: 1366px;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-end;
-    padding: 0 103px;
-  }
-}
-
-.offers__header {
+.faq__header {
   font-family: $accent-font;
   font-weight: 600;
   margin: 0;
@@ -59,4 +46,10 @@
     font-size: 54px;
     line-height: 54px;
   }
+
+  @media (min-width: $tablet-width) {
+    grid-area: header;
+  }
 }
+
+
