Исправляет отступы по pp на мобильной версии

--- a/source/sass/blocks/main-info.scss
+++ b/source/sass/blocks/main-info.scss
@@ -40,6 +40,7 @@
   line-height: 62px;
   text-align: right;
   text-transform: uppercase;
+  letter-spacing: 1px;
 
   @media (min-width: $tablet-width) {
     font-size: 72px;
