--- a/source/sass/blocks/prices.scss
+++ b/source/sass/blocks/prices.scss
@@ -3,7 +3,7 @@
 }
 
 .prices__wrapper {
-  padding: 40px 15px;
+  padding: 41px 15px 39px;
   width: 320px;
 
   @media (min-width: $tablet-width) {
