--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -24,7 +24,7 @@
   position: relative;
   justify-content: space-between;
   width: 100%;
-  padding: 0 0 10px;
+  padding: 0 0 8px;
 
 
   @media (min-width: $tablet-width) {
@@ -45,7 +45,7 @@
     background-color: rgb(120, 120, 120, 0.2);
     left: 0;
     height: 2px;
-    bottom: 0;
+    bottom: 1px;
     width: 100%;
   }
 }
@@ -54,6 +54,7 @@
   border: none;
   background-color: transparent;
   color: rgb(120, 120, 120, 0.2);
+  padding: 0;
 }
 
 .tabs__navigation-button--active {
@@ -65,7 +66,7 @@
     position: absolute;
     background-color: #D10A42;
     height: 2px;
-    bottom: -10px;
+    bottom: -7px;
     left: 0;
     width: 100%;
   }
