--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -122,6 +122,67 @@
   }
 }
 
+.about__video-image-container {
+  position: relative;
+  display: block;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 320px;
+    height: 170px;
+    background-color: rgba(20, 54, 122, 0.502);
+    background-size: 320px 170px;
+    background-size: cover;
+    z-index: 10;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border-top: 5px solid transparent;   /* Верхний прозрачный угол */
+    border-bottom: 5px solid transparent; /* Нижний прозрачный угол */
+    border-left: 9px solid #ffffff;
+    z-index: 100;
+    translate: -32% -50%;
+  }
+}
+
+.about__video-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 52px;
+  height: 52px;
+  border-radius: 50%;
+  border: transparent;
+  background-image: linear-gradient(97.05deg, #ED0233 17.6%, #003EB7 95.31%);
+  background-size: 320px 170px;
+  background-size: cover;
+  z-index: 20;
+  translate: -50% -50%;
+  padding: 0;
+  margin: 0;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    right: -10px;
+    bottom: -10px;
+    border: 2px solid rgb(237, 2, 51, 0.2);
+    border-radius: 50%;
+    z-index: -1;
+  }
+}
+
 .about__video-image {
   @media (min-width: $tablet-width) {
     position: absolute;
