--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 48px 15px 32px;
+  padding: 51px 15px 32px;
 
   @media (min-width: $tablet-width) {
     padding: 0 45px 100px;
@@ -18,7 +18,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 48px 21px;
+  gap: 47px 21px;
+  align-items: flex-end;
 
   @media (min-width: $tablet-width) {
     gap: 47px 26px;
