--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -17,12 +17,14 @@
   align-items: center;
 
   @media (min-width: $tablet-width) {
-    padding: 60px 45px 120px;
+    padding: 62px 45px 85px;
   }
 
   @media (min-width: $desktop-width) {
     flex-direction: row;
     gap: 145px;
+    padding: 120px 103px 205px;
+    align-items: flex-start;
   }
 }
 
@@ -34,10 +36,12 @@
 
   @media (min-width: $tablet-width) {
     align-items: center;
+    gap: 6px;
   }
 
   @media (min-width: $desktop-width) {
     align-items: flex-start;
+    padding: 0;
   }
 }
 
@@ -51,13 +55,14 @@
   @media (min-width: $tablet-width) {
     font-size: 42px;
     line-height: 42px;
+    margin: 0 0 13px;
   }
 
   @media (min-width: $desktop-width) {
     font-size: 54px;
     line-height: 54px;
     text-align: left;
-    margin: 0 0 25px;
+    margin: 0 0 20px;
   }
 }
 
@@ -68,17 +73,18 @@
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
+    margin: 0 0 30px;
   }
 
   @media (min-width: $desktop-width) {
     font-size: 22px;
     line-height: 22px;
     text-align: left;
-    margin: 0 0 95px;
+    margin: 0 0 88px;
   }
 }
 
-.about__info-description {
+.about__info p:nth-of-type(2){
   margin: 0;
   font-size: 14px;
   line-height: 22px;
@@ -94,11 +100,11 @@
   @media (min-width: $desktop-width) {
     max-width: 355px;
     text-align: left;
-    margin: 0 0 10px;
+    margin: 0 0 1px;
   }
 }
 
-.about__info-additional {
+.about__info p:nth-of-type(3) {
   display: none;
 
   @media (min-width: $desktop-width) {
@@ -124,7 +130,6 @@
 
 .about__video-image-container {
   position: relative;
-  display: block;
 
   &::after {
     content: "";
@@ -137,6 +142,22 @@
     background-size: 320px 170px;
     background-size: cover;
     z-index: 10;
+
+    @media (min-width: $tablet-width) {
+      top: -120px;
+      left: 205px;
+      background-size: 270px 170px;
+      width: 270px;
+      height: 170px;
+    }
+
+    @media (min-width: $desktop-width) {
+      background-size: 360px 230px;
+      width: 360px;
+      height: 230px;
+      top: -149px;
+      left: -100px;
+    }
   }
 
   &::before {
@@ -146,11 +167,23 @@
     left: 50%;
     width: 0;
     height: 0;
-    border-top: 5px solid transparent;   /* Верхний прозрачный угол */
-    border-bottom: 5px solid transparent; /* Нижний прозрачный угол */
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
     border-left: 9px solid #ffffff;
     z-index: 100;
     translate: -32% -50%;
+
+    @media (min-width: $tablet-width) {
+      top: -35px;
+    }
+
+    @media (min-width: $desktop-width) {
+      top: -37px;
+      left: 80px;
+      border-top: 7px solid transparent;
+      border-bottom: 7px solid transparent;
+      border-left: 12px solid #ffffff;
+    }
   }
 }
 
@@ -170,6 +203,18 @@
   padding: 0;
   margin: 0;
 
+  @media (min-width: $tablet-width) {
+    translate: -50% -62px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 72px;
+    height: 72px;
+    translate: 0;
+    left: 44px;
+    top: -71px;
+  }
+
   &::after {
     content: "";
     position: absolute;
@@ -180,20 +225,28 @@
     border: 2px solid rgb(237, 2, 51, 0.2);
     border-radius: 50%;
     z-index: -1;
+
+    @media (min-width: $desktop-width) {
+      top: -15px;
+      left: -15px;
+      right: -15px;
+      bottom: -15px;
+    }
   }
 }
 
 .about__video-image {
   @media (min-width: $tablet-width) {
     position: absolute;
-    bottom: -60px;
+    bottom: -50px;
     left: 50%;
     transform: translate(-135px);
   }
 
   @media (min-width: $desktop-width) {
-    bottom: -70px;
+    bottom: -80px;
     left: 5%;
     transform: translate(-135px);
   }
+
 }
