--- a/source/sass/blocks/ad-timetable.scss
+++ b/source/sass/blocks/ad-timetable.scss
@@ -3,7 +3,7 @@
   line-height: 20px;
   font-weight: 300;
   margin: 0;
-  max-width: 56px;
+  width: 56px;
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -11,10 +11,13 @@
   @media (min-width: $tablet-width) {
     font-size: 18px;
     line-height: 24px;
+    width: 100px;
+    gap: 10px;
   }
 
   @media (min-width: $desktop-width) {
     max-width: 95px;
+    gap: 20px;
   }
 }
 
@@ -31,6 +34,11 @@
     width: 100%;
     bottom: -2px;
     left: 0;
+
+    @media (min-width: $tablet-width) {
+      bottom: -3px;
+    }
+
   }
 }
 
@@ -39,6 +47,7 @@
   line-height: 24px;
   font-weight: 700;
   margin: 0;
+
 
   @media (min-width: $desktop-width) {
     font-size: 40px;
@@ -50,6 +59,11 @@
   display: flex;
   flex-direction: row;
   gap: 3px;
+
+  @media (min-width: $tablet-width) {
+    align-items: center;
+    gap: 6px;
+  }
 }
 
 .ad-timetable__content-extra {
@@ -60,8 +74,9 @@
   max-width: 56px;
 
   @media (min-width: $tablet-width) {
-    font-size: 18px;
-    line-height: 24px;
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: 400;
   }
 }
 
@@ -69,5 +84,10 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+
+  @media (min-width: $desktop-width) {
+    gap: 12px;
+  }
+
 }
 
