--- a/source/sass/blocks/ad.scss
+++ b/source/sass/blocks/ad.scss
@@ -7,12 +7,12 @@
   gap: 15px;
 
   @media (min-width: $tablet-width) {
-    gap: 10px;
+    gap: 9px;
   }
 
   @media (min-width: $desktop-width) {
     padding: 60px 80px 98px;
-    gap: 30px;
+    gap: 31px;
   }
 }
 
@@ -27,6 +27,11 @@
   @media (min-width: $tablet-width) {
     font-size: 18px;
     line-height: 24px;
+    gap: 11px 0;
+  }
+
+  @media (min-width: $tablet-width) {
+    gap: 29px 0;
   }
 }
 
@@ -71,4 +76,12 @@
   border-color: $shadow-light;
   text-align: center;
   padding: 22px 10px;
+
+  @media (min-width: $tablet-width) {
+    padding: 24px 10px;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 25px 10px;
+  }
 }
