--- a/source/sass/blocks/contact.scss
+++ b/source/sass/blocks/contact.scss
@@ -5,14 +5,31 @@
 
   @media (min-width: $tablet-width) {
     gap: 5px;
+    width: 190px;
   }
 }
 .contact__header {
   margin: 0;
+  font-size: 20px;
+  line-height: 20px;
+  font-weight: 400;
+
+  @media (min-width: $tablet-width) {
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
 
 .contact__subtitle {
   color: inherit;
   text-decoration: none;
   margin: 0;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+
+  @media (min-width: $tablet-width) {
+    font-size: 14px;
+    line-height: 22px;
+  }
 }
