--- a/source/sass/blocks/contacts-info.scss
+++ b/source/sass/blocks/contacts-info.scss
@@ -14,13 +14,13 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 42px;
-  padding: 40px 15px;
+  gap: 37px;
+  padding: 37px 15px 40px;
 
 
   @media (min-width: $tablet-width) {
     align-items: center;
-    padding: 60px 164px;
+    padding: 59px 164px 60px;
   }
 
   @media (min-width: $desktop-width) {
@@ -56,10 +56,28 @@
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 15px 60px;
+    grid-auto-flow: column;
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      height: 100%;
+      width: 1px;
+      background-color: #74819c;
+      left: 50%;
+      bottom: 0;
+
+      @media (min-width: $desktop-width) {
+        translate: -6px;
+      }
+
+    }
   }
 
   @media (min-width: $desktop-width) {
-    gap: 15px 120px;
+    gap: 15px 108px;
   }
 }
