--- a/source/sass/blocks/extra-offer.scss
+++ b/source/sass/blocks/extra-offer.scss
@@ -14,6 +14,7 @@
 
   @media (min-width: $desktop-width) {
     width: 100%;
+    min-height: 174px;
   }
 }
 
@@ -24,7 +25,7 @@
   font-weight: 700;
 
   @media (min-width: $tablet-width) {
-    margin: 0 0 20px;
+    margin: 0 0 10px;
     font-size: 26px;
     line-height: 26px;
   }
@@ -49,7 +50,7 @@
   line-height: 14px;
   font-weight: 700;
   text-transform: uppercase;
-  padding-bottom: 5px;
+  padding-bottom: 6px;
   position: relative;
   margin-top: auto;
 
@@ -62,10 +63,4 @@
     left: 0;
     bottom: 0;
   }
-}
-
-@media (min-width: $tablet-width) {
-}
-
-@media (min-width: $desktop-width) {
 }
