--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -11,7 +11,7 @@
 
 .faq__wrapper {
   width: 320px;
-  padding: 70px 15px;
+  padding: 71px 15px;
   display: flex;
   flex-direction: column;
   gap: 35px;
@@ -43,12 +43,14 @@
   line-height: 32px;
 
   @media (min-width: $tablet-width) {
-    font-size: 54px;
-    line-height: 54px;
+    font-size: 42px;
+    line-height: 42px;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     grid-area: header;
+    font-size: 54px;
+    line-height: 54px;
   }
 }
 
