--- a/source/sass/blocks/features-card.scss
+++ b/source/sass/blocks/features-card.scss
@@ -3,20 +3,47 @@
   flex-direction: column;
   align-items: center;
   gap: 12px;
-  padding: 0 30px;
+  padding: 0 40px;
+  width: 320px;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
+    align-items: flex-start;
     padding: 0;
     gap: 14px;
     width: 324px;
   }
 
   @media (min-width: $desktop-width) {
-    gap: 8px;
+    gap: unset;
+    justify-content: space-between;
+    width: 360px;
   }
+}
 
+.features-card:nth-child(3) {
+  grid-row: span 2;
+}
+
+.features-card:nth-child(1) {
+  order: 1;
+}
+
+.features-card:nth-child(3) {
+  order: 2;
+}
+
+.features-card:nth-child(2) {
+  order: 3;
+}
+
+.features-card:nth-child(4) {
+  order: 4;
+}
+
+.features-card:nth-child(5) {
+  order: 5;
 }
 
 .features-card__statistics {
@@ -35,6 +62,7 @@
   @media (min-width: $tablet-width) {
     font-size: 70px;
     line-height: 70px;
+    align-items: flex-start;
   }
 }
 
@@ -64,6 +92,7 @@
 
   @media (min-width: $desktop-width) {
     gap: 8px;
+    width: 213px;
   }
 }
 
@@ -82,7 +111,7 @@
   }
 }
 
-.features-card__subtitle{
+.features-card__subtitle {
   text-align: center;
   margin: 0;
   font-weight: 300;
@@ -94,4 +123,98 @@
     line-height: 24px;
     text-align: left;
   }
+}
+
+.features-card--accent {
+  background-color: $background-dark;
+  width: 100%;
+  margin: 4px 0;
+
+  @media (min-width: $tablet-width) {
+    background-color: transparent;
+    width: 678px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 360px;
+  }
+}
+
+.features-card__wrapper {
+  width: 320px;
+  padding: 30px 75px 41px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: column;
+    padding: 35px;
+    gap: 25px;
+    width: 320px;
+    background-color: $background-dark;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 58px 40px;
+    gap: 30px;
+    width: 360px;
+  }
+}
+
+.features-card--accent .features-card__statistics {
+  color: $accent-text-color;
+  background: none;
+  -webkit-text-fill-color: $accent-text-color;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+
+  @media (min-width: $tablet-width) {
+    gap: 25px;
+    align-items: center;
+  }
+
+  @media (min-width: $desktop-width) {
+    gap: 10px;
+  }
+}
+
+
+
+.features-card--accent .features-card__statistics-subtitle {
+  color: $accent-text-color;
+  background: none;
+  -webkit-text-fill-color: $accent-text-color;
+  font-size: 22px;
+  line-height: 22px;
+  font-weight: 700;
+
+  @media (min-width: $tablet-width) {
+    font-size: 24px;
+    line-height: 24px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 26px;
+    line-height: 26px;
+  }
+}
+
+.features-card--accent .features-card__subtitle {
+  color: $accent-text-color;
+  background: none;
+  -webkit-text-fill-color: $accent-text-color;
+  text-align: center;
+}
+
+.features-card--accent .features-card__header {
+  color: $accent-text-color;
+  background: none;
+  -webkit-text-fill-color: $accent-text-color;
+  margin-bottom: 5px;
 }
