--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -13,12 +13,14 @@
 
   @media (min-width: $tablet-width) {
     width: 768px;
-    padding: 60px 45px;
+    padding: 60px 42px;
+    gap: 50px;
   }
 
   @media (min-width: $desktop-width) {
     width: 1366px;
     padding: 100px 103px;
+    gap: 51px;
   }
 }
 
@@ -30,7 +32,6 @@
   gap: 40px;
 
   @media (min-width: $desktop-width) {
-    width: 1366px;
     flex-direction: row;
     justify-content: space-between;
   }
@@ -44,6 +45,11 @@
   line-height: 32px;
 
   @media (min-width: $tablet-width) {
+    font-size: 42px;
+    line-height: 42px;
+  }
+
+  @media (min-width: $desktop-width) {
     font-size: 54px;
     line-height: 54px;
   }
@@ -54,22 +60,28 @@
   flex-direction: column;
   align-items: center;
   gap: 35px;
-  padding: 0 15px;
+  width: 100%;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
     padding: 0;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px 30px;
   }
 
   @media (min-width: $desktop-width) {
-    flex-direction: column;
-    gap: 80px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 80px 40px;
   }
 }
 
 .features__list-wrapper {
-  width: 320px;
+  width: 100%;
 
   @media (min-width: $tablet-width) {
     width: auto;
@@ -78,89 +90,4 @@
   @media (min-width: $desktop-width) {
     width: 1366px;
   }
-}
-
-
-.features__list-wrapper--accent {
-  background-color: $background-dark;
-  width: 100%;
-
-  @media (min-width: $tablet-width) {
-    width: fit-content;
-  }
-}
-
-.features__list-wrapper--accent .features-card {
-  padding: 30px 75px 40px;
-  gap: 20px;
-  width: 100%;
-
-  @media (min-width: $tablet-width) {
-    flex-direction: column;
-    padding: 35px;
-    gap: 25px;
-    width: 320px;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding: 58px 40px;
-    gap: 30px;
-    width: 360px;
-  }
-}
-
-.features__list-wrapper--accent .features__list {
-  padding: 0;
-}
-
-.features__list-wrapper--accent .features-card__statistics {
-  color: $accent-text-color;
-  background: none;
-  -webkit-text-fill-color: $accent-text-color;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-
-  @media (min-width: $tablet-width) {
-    gap: 25px;
-  }
-
-  @media (min-width: $tablet-width) {
-    gap: 10px;
-  }
-}
-
-
-
-.features__list-wrapper--accent .features-card__statistics-subtitle {
-  color: $accent-text-color;
-  background: none;
-  -webkit-text-fill-color: $accent-text-color;
-  font-size: 22px;
-  line-height: 22px;
-  font-weight: 700;
-
-  @media (min-width: $tablet-width) {
-    font-size: 24px;
-    line-height: 24px;
-  }
-
-  @media (min-width: $desktop-width) {
-    font-size: 26px;
-    line-height: 26px;
-  }
-}
-
-.features__list-wrapper--accent .features-card__subtitle {
-  color: $accent-text-color;
-  background: none;
-  -webkit-text-fill-color: $accent-text-color;
-  text-align: center;
-}
-
-.features__list-wrapper--accent .features-card__header {
-  color: $accent-text-color;
-  background: none;
-  -webkit-text-fill-color: $accent-text-color;
-  margin-bottom: 5px;
 }
