--- a/source/sass/blocks/juri.scss
+++ b/source/sass/blocks/juri.scss
@@ -50,20 +50,21 @@
     display: block;
     background-image: url(/__spritemap#sprite-next-button-view);
     background-repeat: no-repeat;
+    background-size: contain;
     fill: #102654;
     position: absolute;
     bottom: 50%;
     translate: 0 50%;
-    right: -37px;
-    width: 16px;
-    height: 32px;
+    right: -55px;
+    width: 20px;
+    height: 37px;
     border: none;
     background-color: transparent;
     padding: 0;
   }
 
   @media (min-width: $desktop-width) {
-    right: -38px;
+    right: -55px;
   }
 }
 
@@ -79,16 +80,16 @@
     bottom: 50%;
     translate: 0 50%;
     transform: rotate(180deg);
-    left: -37px;
-    width: 16px;
-    height: 32px;
+    left: -55px;
+    width: 20px;
+    height: 37px;
     border: none;
     background-color: transparent;
     padding: 0;
   }
 
   @media (min-width: $desktop-width) {
-    right: -38px;
+    right: -39px;
   }
 }
 
