--- a/source/sass/blocks/main-info.scss
+++ b/source/sass/blocks/main-info.scss
@@ -57,7 +57,7 @@
 
 .main-info__order-button {
   width: 100%;
-  min-height: 60px;
+  min-height: 56px;
   background-color: transparent;
   font-size: 12px;
   line-height: 12px;
@@ -72,6 +72,7 @@
   @media (min-width: $tablet-width) {
     width: 185px;
     margin-left: auto;
+    padding: 20px 10px;
   }
 
   @media (min-width: $desktop-width) {
@@ -80,6 +81,7 @@
     line-height: 12px;
     letter-spacing: 0;
     margin-left: 0;
+    padding: 25px 10px;
   }
 }
 
