--- a/source/sass/blocks/membership-card.scss
+++ b/source/sass/blocks/membership-card.scss
@@ -6,9 +6,18 @@
   background-color: $background-color;
   padding: 50px 42px;
 
+  @media (min-width: $tablet-width) {
+    padding: 65px;
+    gap: 22px;
+    width: 380px;
+    padding: 65px;
+    z-index: 100;
+  }
+
   @media (min-width: $desktop-width) {
     width: 360px;
-    gap: 40px;
+    gap: 17px;
+
   }
 }
 
@@ -53,9 +62,15 @@
   width: 100%;
 
   @media (min-width: $tablet-width) {
+    padding: 60px 71px 0 41px;
     font-size: 60px;
-    line-height: 150%;
-    padding-top: 60px;
+    line-height: 90px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 60px 80px 0 32px;
+    font-size: 60px;
+    line-height: 90px;
   }
 }
 
@@ -69,18 +84,39 @@
   right: 37px;
   width: 24px;
   height: 33px;
+
+  @media (min-width: $tablet-width) {
+    width: 30px;
+    height: 42px;
+    right: 40px;
+    bottom: 22px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 30px;
+    height: 42px;
+    right: 33px;
+    bottom: 24px;
+  }
 }
 
 .membership-card__price::after {
   content: attr(data-text);
   position: absolute;
   z-index: -1;
-  top: 20px;
-  left: 5px;
-  font-size: 2em;
+  top: 0;
+  left: 23px;
+  font-size: 80px;
+  line-height: 120px;
+  font-weight: 700;
   opacity: 48%;
   color: #E8E8E8;
   pointer-events: none;
+
+  @media (min-width: $tablet-width) {
+    font-size: 100px;
+    line-height: 150px;
+  }
 }
 
 .membership-card__button {
