--- a/source/sass/blocks/membership-cards.scss
+++ b/source/sass/blocks/membership-cards.scss
@@ -10,6 +10,7 @@
   @media (min-width: $tablet-width) {
     font-size: 24px;
     line-height: 24px;
+    gap: 40px;
   }
 
   @media (min-width: $desktop-width) {
