--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -9,6 +9,7 @@
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
+    align-items: flex-start;
     gap: 40px;
     padding: 40px 30px;
     width: 500px;
@@ -50,10 +51,12 @@
   font-weight: 300;
   font-size: 14px;
   line-height: 22px;
+  text-align: center;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
-  line-height: 24px;
+    line-height: 24px;
+    text-align: left;
   }
 }
 
