--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -5,10 +5,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media (min-width: $desktop-width) {
+    align-items: stretch;
+    flex: 1;
+  }
 }
 
 .subscription__wrapper {
-  padding: 70px 15px;
+  padding: 71px 15px 70px;
   width: 320px;
   display: flex;
   flex-direction: column;
@@ -22,6 +27,7 @@
   @media (min-width: $desktop-width) {
     padding: 60px 103px;
     width: 683px;
+    height: 100%;
   }
 }
 
