--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -31,12 +31,14 @@
     font-size: 18px;
     line-height: 18px;
     width: 310px;
+    padding: 0 0 13px;
   }
 
   @media (min-width: $desktop-width) {
     font-size: 20px;
     line-height: 20px;
     width: 350px;
+    padding: 0 0 26px;
   }
 
   &::after {
@@ -47,6 +49,14 @@
     height: 2px;
     bottom: 1px;
     width: 100%;
+
+    @media (min-width: $tablet-width) {
+      bottom: 8px;
+    }
+
+    @media (min-width: $desktop-width) {
+      bottom: 20px;
+    }
   }
 }
 
@@ -69,6 +79,14 @@
     bottom: -7px;
     left: 0;
     width: 100%;
+
+    @media (min-width: $tablet-width) {
+      bottom: -5px;
+    }
+
+    @media (min-width: $desktop-width) {
+      bottom: -6px;
+    }
   }
 }
 
