--- a/source/sass/blocks/faq-tabs.scss
+++ b/source/sass/blocks/faq-tabs.scss
@@ -40,5 +40,5 @@
 
 .faq-tabs__navigation-button--active {
   color: #ffffff;
-  background-image: linear-gradient(97.05deg, #ED0233 17.6%, #003EB7 95.31%);
+  background-image: linear-gradient(97.05deg, #ed0233 17.6%, #003eb7 95.31%);
 }
