--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,52 +2,46 @@
 // ---------------------------------
 
 @import "vendor/normalize";
-@import "./common/variables.scss";
-@import "./common/mixins.scss";
-@import "./common/fonts.scss";
-@import "./common/global.scss";
-@import "./common/visually-hidden.scss";
+@import "./common/variables";
+@import "./common/mixins";
+@import "./common/fonts";
+@import "./common/global";
+@import "./common/visually-hidden";
 
-//blocks
-@import "./blocks/page-body.scss";
-@import "./blocks/page.scss";
-@import "./blocks/promo.scss";
-@import "./blocks/navigation.scss";
-@import "./blocks/hero.scss";
-@import "./blocks/zones.scss";
-@import "./blocks/main-info.scss";
-@import "./blocks/main.scss";
-@import "./blocks/about.scss";
-@import "./blocks/prices.scss";
-@import "./blocks/tabs.scss";
-@import "./blocks/membership-card.scss";
-@import "./blocks/membership-cards.scss";
-@import "./blocks/competitons.scss";
-@import "./blocks/ad.scss";
-@import "./blocks/ad-timetable.scss";
-@import "./blocks/juri.scss";
-@import "./blocks/juri-card.scss";
-@import "./blocks/features-card.scss";
-@import "./blocks/features.scss";
-@import "./blocks/offers.scss";
-@import "./blocks/main-offer.scss";
-@import "./blocks/extra-offers.scss";
-@import "./blocks/extra-offer.scss";
-//faq
-@import "./blocks/faq.scss";
-@import "./blocks/faq-tabs.scss";
-@import "./blocks/faq-accordion.scss";
-
-//reviews
-@import "./blocks/reviews.scss";
-@import "./blocks/review.scss";
-@import "./blocks/reviews-slider.scss";
-
-@import "./blocks/main-footer.scss";
-@import "./blocks/footer-links.scss";
-@import "./blocks/socials.scss";
-@import "./blocks/contacts.scss";
-@import "./blocks/subscription.scss";
-@import "./blocks/subscription-form.scss";
-@import "./blocks/contacts-info.scss";
-@import "./blocks/contact.scss";
+// blocks
+@import "./blocks/page-body";
+@import "./blocks/promo";
+@import "./blocks/navigation";
+@import "./blocks/hero";
+@import "./blocks/main-info";
+@import "./blocks/main";
+@import "./blocks/about";
+@import "./blocks/prices";
+@import "./blocks/tabs";
+@import "./blocks/membership-card";
+@import "./blocks/membership-cards";
+@import "./blocks/competitons";
+@import "./blocks/ad";
+@import "./blocks/ad-timetable";
+@import "./blocks/juri";
+@import "./blocks/juri-card";
+@import "./blocks/features-card";
+@import "./blocks/features";
+@import "./blocks/offers";
+@import "./blocks/main-offer";
+@import "./blocks/extra-offers";
+@import "./blocks/extra-offer";
+@import "./blocks/faq";
+@import "./blocks/faq-tabs";
+@import "./blocks/faq-accordion";
+@import "./blocks/reviews";
+@import "./blocks/review";
+@import "./blocks/reviews-slider";
+@import "./blocks/main-footer";
+@import "./blocks/footer-links";
+@import "./blocks/socials";
+@import "./blocks/contacts";
+@import "./blocks/subscription";
+@import "./blocks/subscription-form";
+@import "./blocks/contacts-info";
+@import "./blocks/contact";
