--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -84,7 +84,7 @@
   }
 }
 
-.about__info p:nth-of-type(2){
+.about__info p:nth-of-type(2) {
   margin: 0;
   font-size: 14px;
   line-height: 22px;
@@ -138,8 +138,7 @@
     left: 0;
     width: 320px;
     height: 170px;
-    background-color: rgba(20, 54, 122, 0.502);
-    background-size: 320px 170px;
+    background-color: rgba(20, 54, 122, 0.5);
     background-size: cover;
     z-index: 10;
 
@@ -195,8 +194,7 @@
   height: 52px;
   border-radius: 50%;
   border: transparent;
-  background-image: linear-gradient(97.05deg, #ED0233 17.6%, #003EB7 95.31%);
-  background-size: 320px 170px;
+  background-image: linear-gradient(97.05deg, #ed0233 17.6%, #003eb7 95.31%);
   background-size: cover;
   z-index: 20;
   translate: -50% -50%;
@@ -248,5 +246,4 @@
     left: 5%;
     transform: translate(-135px);
   }
-
 }
