--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -71,6 +71,35 @@
     align-items: center;
     padding-bottom: 70px;
     margin-top: auto;
+  }
+}
 
+.hero__order-button {
+  width: 100%;
+  min-height: 56px;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: $accent-text-color;
+  border: 2px solid;
+  border-color: $shadow-light;
+  text-align: center;
+  padding: 22px 10px;
+
+  @media (min-width: $tablet-width) {
+    width: 185px;
+    margin-left: auto;
+    padding: 20px 10px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 270px;
+    font-size: 12px;
+    line-height: 12px;
+    letter-spacing: 0;
+    margin-left: 0;
+    padding: 25px 10px;
   }
 }
