--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -1,3 +1,10 @@
+.main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .main__prices {
   width: 100%;
   display: flex;
@@ -25,7 +32,7 @@
   align-items: center;
 }
 
-.main__offers{
+.main__offers {
   width: 100%;
 }
 
