--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 15px;
+  padding: 15px;
 
   @media (min-width: $tablet-width) {
     padding: 30px 45px;
