--- a/source/sass/blocks/prices.scss
+++ b/source/sass/blocks/prices.scss
@@ -18,11 +18,12 @@
       right: -272px;
       width: 400px;
       height: 405px;
-      background-image: image-set(url("../../img/weights-background-tablet@1x.webp") 1x,
-      url("../../img/weights-background-tablet@2x.webp") 2x,
-      url("../../img/weights-background-tablet@1x.png") 1x,
-      url("../../img/weights-background-tablet@2x.png") 2x
-    );
+      background-image:
+        image-set(url("../../img/weights-background-tablet@1x.webp") 1x,
+        url("../../img/weights-background-tablet@2x.webp") 2x,
+        url("../../img/weights-background-tablet@1x.png") 1x,
+        url("../../img/weights-background-tablet@2x.png") 2x
+      );
       background-repeat: no-repeat;
       background-size: contain;
       z-index: 1;
