--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -74,7 +74,7 @@
   &::after {
     content: "";
     position: absolute;
-    background-color: #D10A42;
+    background-color: #d10a42;
     height: 2px;
     bottom: -7px;
     left: 0;
