--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -11,17 +11,21 @@
 
   @media (min-width: $desktop-width) {
     padding: 30px 103px;
+    align-items: flex-start;
+  }
+}
+
+.navigation__contacts-link {
+  @media (min-width: $desktop-width) {
+    margin-top: 2px;
   }
 }
 
 .navigation__logo-image {
-  @media (min-width: $tablet-width) {
-    width: 110px;
-    height: 22px;
-  }
-
   @media (min-width: $desktop-width) {
     width: 130px;
     height: 26px;
   }
 }
+
+
