--- a/source/sass/blocks/features-card.scss
+++ b/source/sass/blocks/features-card.scss
@@ -23,24 +23,34 @@
 }
 
 .features-card:nth-child(1) {
-  order: 1;
+  @media (min-width: $desktop-width) {
+    order: 1;
+  }
 }
 
 .features-card:nth-child(3) {
-  order: 2;
-  grid-row: span 2;
+  @media (min-width: $desktop-width) {
+    order: 2;
+    grid-row: span 2;
+  }
 }
 
 .features-card:nth-child(2) {
-  order: 3;
+  @media (min-width: $desktop-width) {
+    order: 3;
+  }
 }
 
 .features-card:nth-child(4) {
-  order: 4;
+  @media (min-width: $desktop-width) {
+    order: 4;
+  }
 }
 
 .features-card:nth-child(5) {
-  order: 5;
+  @media (min-width: $desktop-width) {
+    order: 5;
+  }
 }
 
 .features-card__statistics {
