Исправлет блок hero на pp

--- a/source/sass/blocks/features-card.scss
+++ b/source/sass/blocks/features-card.scss
@@ -98,7 +98,7 @@
 
   @media (min-width: $desktop-width) {
     gap: 8px;
-    width: 213px;
+    width: 211px;
   }
 }
 
@@ -162,7 +162,7 @@
     padding: 35px;
     gap: 25px;
     width: 320px;
-    background-color: $background-dark;
+    background-color: #1c3374;
   }
 
   @media (min-width: $desktop-width) {
